--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -4,11 +4,13 @@
     padding:0 ;    
 }
 body {
+    font-family: "Calibri" Verdana, Tahoma, sans-serif;
     font:16px/1.5 "Calibri","Arial",sans-serif;
     padding: 0;
     margin: 0;  
     color:black;
-    
+    background-color:rgb(226, 225, 225); 
+   
     
 }
 
@@ -26,34 +28,38 @@ header {
     
     position: fixed;
     width: 100%;  
-    min-height: 72px;  
-    
+    min-height: 70px;    
     color:gold;   
     z-index: 999;
-        
+    
+    
 }
 
 nev {
     display:none;
     top:0;
     width: 45%;
+    margin-top:18px ;   
     padding: 0;
-    float:right;   
+    float:right;
+   
+
 }
 
 nev ul {
     padding: 0;  
+  
 }
 
 nev li{
     display: inline;
     top:0;
-    width : 60px;
-    height: 70px;
+    width : 85px;
+    height: 40px;
     float:left;
     margin: 0 2px 0 2px;       
     text-align: center;  
-    border-radius: 10px;    
+    border-radius: 15px;    
 }
 
 
@@ -62,7 +68,7 @@ nev a{
     color:gold;
     text-decoration: none;
     font-size: 16px;
-    line-height: 70px;
+    line-height: 40px;
     
 }
 
@@ -148,6 +154,7 @@ header .current{
     background-color: gold;
     border-radius: 2px;
     position: relative;
+    transition: all .5s ease-in-out;
 }
 
 .nev-toggle span::before,
@@ -175,7 +182,11 @@ header .current{
         display: none;
     }
 
-    
+    .contact {
+        background-color: whitesmoke;
+        color: #22193f;
+        border-radius: 20px;
+    }
 }
 
 
@@ -193,8 +204,12 @@ header .current{
     display: grid;
     grid-template-rows: 25% 50% 20%;  
     width: 100%;
-    height: 87vh;
-    
+    height: 90vh;
+    padding-top: 55px;
+    background-color:#423a5c;
+    background-image: url(../Images/mobi3.jpg); 
+    background-size:cover;
+    background-position: center;
       
 }
 
@@ -207,14 +222,13 @@ section #home-content {
     color:#fafeff; 
     font: normal normal lighter 12pt Calibri ; 
     
-    
-  
-   
+      
 }
 
 section #text  {
     align-items: left;
     line-height: 25pt;
+    
  
 }
 
@@ -255,19 +269,23 @@ section #home-image img {
     font: italic normal normal 14pt "Calibri" ;    
     
 }
+
+#main-grid #socials{   
+    display: none;
+}
+
 button{
     margin: 5px;
     height:40px;
     width: 150px;
     font: italic normal  12pt "Calibri" ; 
     text-align: center;
-    background-color:#97a4b7; 
-    background: linear-gradient(white,#97a4b7);
-    color:black;
-    border-radius: 10px;
-    border-style: hidden;
-    
+    background-color:#3b3451; 
+    color:white;  
+    border-style: hidden;   
 }
+
+
 
 @media only screen and (min-width: 768px) {
     /* For desktop: */
@@ -277,29 +295,429 @@ button{
     }
     #main-grid{
         display: grid;
-        grid-template-columns: 35% 60% 5%;    
+        grid-template-columns: 40% 55% 5%;    
         width: 100%;
-        max-width: 1200px;
-        height: 87vh;                
+        height: 90vh;     
+        background-image: url(../Images/dessk.jpg); 
+        background-size:cover;
+        background-position: center;
+       
+                   
     }
 
     section #home-content { 
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-end;
         text-align: left;  
-        height: 80vh;             
+        height: 80vh; 
+        padding-left:50px ;            
     }
 
 
     #home-image{   
-        height: 80vh;
+        height: 90vh;
     }
     
     #home-links{
         display: none;    
     }
+ 
+    #main-grid #socials{ 
+    display: block;  
+    position: absolute;
+    text-align: left;
+    height:60px ;
+    bottom: 120px;  
+    }
+
+    #main-grid  #socials img {   
+    width: 15px;  
+    }
+
+    #main-grid #socials ul 
+    {
+    display: flex;
+    flex-flow: column;
+    justify-content:space-around; 
+    align-items: center; 
+    height:150px ;
+    width:50px ;
     
+    }
+    
+}
+
+
+
+
+
+/*********** About page **********/
+
+
+
+#about-content{  
+     
+    width: 100% ;
+    min-height: 500px;
+    padding-bottom: 60px;
+    font:normal 12pt "Calibri" ;    
+}
+#about-grid{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+      
+}
+
+#about-grid h1 ,h2 ,h3{ 
+    color:#3b3451 ;
+}
+
+
+/* .........Decoration blocks............*/
+
+
+#about-me{    
+    display:flexbox;
+    justify-content: center;
+    align-items: center;
+    min-height:600px;  
+    width: 100%;
+    color:#3b3451 ;
+    background-color:rgb(226, 225, 225);
+   
+}
+
+#about-me .img-box {
+    margin:10px auto 30px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 155px;
+    width: 155px;
+    background-color:#22193f;
+    background:linear-gradient(#635b7e,#66BC8F,rgb(247, 247, 125) );
+    border-radius:100px ;
+
+}
+
+#about-me img {
+   
+    height:150px ;
+    width: auto;
+    border-radius:100px ;
+    
+}
+.text {
+    display: block;
+    max-width:650px ;
+    color:#3b3451 ;
+    text-align: left;
+    margin: 0px auto 0px auto;
+   
+}
+
+@media only screen and (min-width: 768px) {
+
+    #about-content{  
+     
+        
+        font:normal 12pt "Calibri" ; 
+           
+    }
+
+}
+
+/*********** Skills and Tech **********/
+
+ #skills{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width:100%;   
+    min-height:240px;
+    color: #cecece;
+    text-align: center;
+    background-color:rgb(216, 216, 216);
+  
+ }     
+
+ #skills .text {
+     width: 80%;
+ }
+
+#skills  ul
+{
+
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;  
+  width:200px; 
+  min-height: 160px;
+  font-size: 10pt;
+  align-items: center;
+  background-color: ;
+  
+}
+.skill-wrapper 
+{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 10px auto 0px auto;
+    padding-top:5px ;
+    width: 80%;
+    background-color:#3b3451;
+   
+}
+
+.skill-wrapper  ul h3 {
+    color: white;
+
+ }
+
+ #skills  ul img {
+     width: 25px;
+     height: auto;
+ }
+#skills  li
+{  
+    width: 100px;
+    margin:10px 0px 0px 10px;
+    padding-left: 5px;
+   
+    text-align: left;
+    list-style:square;
+    list-style-position: inside;
+    
+   
+}
+
+
+
+#skills img {
+    margin-right:10px ;
+    height: 30px;
+    width: auto;
+}
+
+#skills ul h3 {
+    display: flex;
+    justify-items: start;
+    align-items:flex-end;
+    margin:10px 0 10px 0 ;
+    width: 100px;
+   
+      
+}
+
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+
+    #skills {
+        min-height: 450px;
+    }
+    .skill-wrapper {
+        display: flex;
+        flex-direction: row;
+        background-color:#3b3451;       
+        min-height:300px ;
+        
+    }
+
+    #skills  ul
+    {
+
+        min-height: 180px;
+    }
+
+    
+   
+}
+
+
+/*********** endof skills nd Tech **********/
+
+#about-project {
+   
+   
+    width: 100%;
+    min-height:200px ; 
+    background-color:rgb(226, 225, 225);
+}
+
+
+/*********** Contact me *******************/
+.contact-me h2 {
+    color: white;
+    font-family: "Calibri";
+}
+.contact-me {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 80%;
+    max-width: 800px;
+    background-color: #373147;
+    font:  normal  12pt "Calibri" ; 
+    color: white;
+}
+
+.contact-me .row {  
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    background-color: #373147; 
+     
+}
+
+#img-box {
+    display: none;
+}
+
+.contact-me img {
+    width: 80%;
+    height: auto;
+}
+.contact-me .column  {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #373147;
+    width:90% ;
+}
+
+
+.contact-me label 
+{
+   
+    width: 100%;
+}
+
+/* Style inputs */
+.contact-me input[type=text],[type=email], textarea {
+    
+    width:90%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+    outline: none;
+  }
+
+  input[type=text]:focus,input[type=email]:focus {
+      
+      border: 2px solid#66BC8F;
+  }
+  
+  .contact-me   input[type=submit] {
+    margin-bottom: 20px;
+    height:40px;
+    width: 150px;
+    font: italic normal  14pt "Calibri" ;  
+    background-color: #3fc446;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .contact-me input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+ 
+
+  @media only screen and (min-width: 768px) {
+   /* For desktop: */
+
+    .contact-me .row {         
+        flex-direction: row;               
+    }
+
+    #img-box {
+        display: block;
+    }
+
+      
+}
+
+.wrapper {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+/*For Social*/
+
+#socials{ 
+    display: flex;
+    justify-content:space-around; 
+    align-items: center; 
+    align-self: center;
+    height:45px ;
+   
+   
+}
+
+#socials img {   
+    width: 25px;  
+}
+
+#socials ul 
+{
+    display: flex;
+    justify-content:space-around; 
+    align-items: center;  
+    flex-flow: row;
+}
+
+#socials li 
+{
+    width: 60px ;
+    text-align: center;
+    margin:1px ;
+    list-style: none;
+    line-height: 45px;
+   
+}
+
+#socials a
+{
+    display: flex;
+    justify-content:space-around; 
+    align-items: center;  
+    text-decoration: none; 
+   
+    
+   
+}
+
+/*
+#socials a:hover img{
+    width: 40px;  
+    
+} */
+
+.qoute {
+    width: 70%;
+    font: italic normal  12pt "Calibri" ; 
+    color: #595172;
+    transform: rotate(-2deg);
 }
 
 footer {
@@ -327,200 +745,3 @@ footer li {
       display: inline; 
       padding: 0 20px 0 20px ;
 }
-
-
-
-/*********** About page **********/
-
-.bg-active {
-    background-color:#e0e0e0;
-    }
-
-#about-content{  
-     
-    width: 100% ;
-    min-height: 500px;
-    padding-bottom: 60px;
-    font: regular normal normal 14pt "Calibri" ; 
-    background-color:#e0e0e0; 
-    
-}
-#about-grid{
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    width: 100%;
-      
-}
-
-#about-grid h1 ,h2 ,h3{ 
-    color:#3b3451 ;
-}
-
-
-/* .........Decoration blocks............*/
-
-
-#about-me{    
-    display: block;
-    margin: 0px; 
-    padding-bottom: 10px;
-    min-height: 260px;  
-    border-radius: 25px ;  
-    max-width:500px ;  
-    color:#3b3451 ;
-}
-
-#about-me img {
-    margin:10px 0px 15px 0px;
-    height:150px ;
-    width: auto;
-    
-}
-.text {
-    margin-top: 15px;  
-    max-width:450px ;
-    color:#3b3451 ;
-    text-align: left;
-}
-
-/*********** Skills and Tech **********/
-
- #skills{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 10px;
-    width:80%;   
-    min-height:240px;
-    color: #cecece;
-    text-align: center;
-  
- }     
-
-
-#skills  ul
-{
-
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin:20px 0px 30px 0px;
-  width:200px; 
-  font-size: 10pt;
-  align-items: center;
-  
-}
-.skill-wrapper 
-{
-    margin-top: 20px;
-    background-color:#3b3451;
-}
-
-.skill-wrapper  ul h3 {
-    color: white;
- }
-
- #skills  ul img {
-     width: 30px;
-     height: auto;
- }
-#skills  li
-{  
-    width: 100px;
-    margin:10px 0px 0px 10px;
-    padding-left: 5px;
-    list-style: none;
-    text-align: center;
-   
-}
-
-
-
-#skills img {
-    margin-right:10px ;
-    height: 30px;
-    width: auto;
-}
-
-@media only screen and (min-width: 768px) {
-    /* For desktop: */
-
-    #skills {
-        min-height: 450px;
-    }
-    .skill-wrapper {
-        display: flex;
-        flex-direction: row;
-        background-color:#3b3451;
-        min-height:300px ;
-
-    }
-   
-}
-
-
-/*********** endof skills nd Tech **********/
-
-#about-project {
-   
-    margin-top: 10px;  
-    width: 90%;
-    min-height:200px ; 
-}
-
-
-
-/*For Social*/
-
-#socials{ 
-    margin: 30px;
-    margin-top: 40px;
-    align-self: center;
-    height:60px ;
-   
-}
-
-#socials img {   
-    width: 30px;  
-}
-
-#socials ul 
-{
-    display: flex;
-    flex-flow: row;
-    justify-content:space-around; 
-    align-items: center;
-   
-
-    
-}
-
-#socials li 
-{
-    width: 60px ;
-    text-align: center;
-    margin:1px ;
-    list-style: none;
-    
-   
-}
-
-#socials a
-{
-    display: block;  
-    text-decoration: none; 
-   
-}
-
-/*
-#socials a:hover img{
-    width: 40px;  
-    
-} */
-
-
